Стилизован ToolBar и расширено ядро

--- a/DefaultControlsPack/Themes/Generic.xaml
+++ b/DefaultControlsPack/Themes/Generic.xaml
@@ -9,6 +9,7 @@
         <ResourceDictionary Source="/DefaultControlsPack;component/Themes/Controls/EnclosedTabControl.xaml" />
         <ResourceDictionary Source="/DefaultControlsPack;component/Themes/Controls/SearchTreeView.xaml" />
         <ResourceDictionary Source="/DefaultControlsPack;component/Themes/Controls/Menu.xaml" />
+        <ResourceDictionary Source="/DefaultControlsPack;component/Themes/Controls/ToolBar.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
    
