--- a/DefaultControlsPack/Themes/Controls/MenuItem.xaml
+++ b/DefaultControlsPack/Themes/Controls/MenuItem.xaml
@@ -226,6 +226,7 @@
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
         <Setter Property="Foreground" Value="{StaticResource BaseFontBrush}"/>
+        <Setter Property="FontSize" Value="14"/>
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="ScrollViewer.PanningMode" Value="Both"/>
         <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
