--- a/BasicComponentsPack/ReferenceManager.xaml
+++ b/BasicComponentsPack/ReferenceManager.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:defaultControlsPack="clr-namespace:DefaultControlsPack;assembly=DefaultControlsPack"
+        xmlns:internalClasses="clr-namespace:BasicComponentsPack.InternalClasses"
         Title="ReferenceManager" Height="350" Width="550" Loaded="OnLoad">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -14,6 +15,8 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="30"/>
         </Grid.RowDefinitions>
+        
+        <DataGrid Grid.ColumnSpan="3" Grid.RowSpan="2" Margin="10" DataContext="{x:Type internalClasses:ReferenceGridViewItem}" ItemsSource="{Binding}" x:Name="ReferenceGrid" CanUserAddRows="False" SelectionUnit="FullRow" SelectionMode="Single" />
         <Button Grid.Column="1" Grid.Row="2" Style="{StaticResource {x:Type Button}}" VerticalContentAlignment="Center" Click="OKClick">
             <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Height="20">
                 <Path Stretch="Fill" Fill="{StaticResource SuccessBrush}" Data="{StaticResource Checkmark}" Width="16" Height="16" VerticalAlignment="Center" Margin="5"/>
