--- a/DefaultControlsPack/Themes/Generic.xaml
+++ b/DefaultControlsPack/Themes/Generic.xaml
@@ -10,7 +10,10 @@
         <ResourceDictionary Source="/DefaultControlsPack;component/Themes/Controls/SearchTreeView.xaml" />
         <ResourceDictionary Source="/DefaultControlsPack;component/Themes/Controls/Menu.xaml" />
         <ResourceDictionary Source="/DefaultControlsPack;component/Themes/Controls/ToolBar.xaml" />
+        <ResourceDictionary Source="/DefaultControlsPack;component/Themes/Controls/Info.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
    
+
+    
 </ResourceDictionary>
