Sorted files in solution

--- a/QStudio/MainWindow.xaml
+++ b/QStudio/MainWindow.xaml
@@ -88,7 +88,7 @@
             <MenuItem Header="PLUGINS" x:Name="PluginsMenuItem"/>
             <MenuItem Header="HELP">
                 <MenuItem Header="View Help"/>
-                <MenuItem Header="About Q-Determinant" x:Name="AboutMenuItem"/>
+                <MenuItem Header="About Q-Determinant" Click="AboutClick" />
                 <MenuItem Header="Check Updates"/>
             </MenuItem>
         </Menu>
