--- a/Updater/MainWindow.xaml
+++ b/Updater/MainWindow.xaml
@@ -1,8 +1,26 @@
-﻿<Window x:Class="Updater.MainWindow"
+﻿<defaultControlsPack:ModernWindow x:Class="Updater.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        xmlns:defaultControlsPack="clr-namespace:DefaultControlsPack;assembly=DefaultControlsPack"
+        Title="Обновление программы" Height="175" Width="525" ResizeMode="CanMinimize" Loaded="CheckUpdates">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="2*"/>
+        </Grid.ColumnDefinitions>
+        <ProgressBar Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Height="25" Value="{Binding Path=Percent}" Background="{StaticResource SlaveBackgroundBrush}" Margin="10" BorderBrush="{StaticResource BorderBrush}" x:Name="Bar" Foreground="{StaticResource SuccessBrush}"/>
+        <TextBlock Grid.Row="2" Grid.Column="0" Text="Детали:" Style="{StaticResource BaseFont}" VerticalAlignment="Center" Margin="10"/>
+        <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding}" Style="{StaticResource BaseFont}" VerticalAlignment="Center" Margin="10" x:Name="Message"/>
+        <Button Style="{StaticResource {x:Type Button}}" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Right" Margin="10,5" Visibility="Collapsed">
+            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Height="20">
+                <TextBlock Text="Обновление завершено" FontSize="14" Foreground="{StaticResource BaseFontBrush}" Margin="5,0,0,0" DockPanel.Dock="Right" Style="{StaticResource BaseFont}" VerticalAlignment="Center"/>
+                <Path Stretch="Fill" Fill="{StaticResource SuccessBrush}" Data="{StaticResource Checkmark}" DockPanel.Dock="Left" Width="16" Height="16" VerticalAlignment="Center"/>
+            </StackPanel>
+        </Button>
     </Grid>
-</Window>
+</defaultControlsPack:ModernWindow>
